# proof

./: .gitignore  README.md  app.py  main.py  pyproject.toml  settings.py
.streamlit/: config.toml
assets/sample_board_docs/mixed_topical/: TRS-Risk-Oversight-Committee-Minutes-August-2024.txt
assets/sample_board_docs/text/: TRS-Enterprise-Risk-Dashboard-Q2-2024.md  TRS-Financial-Risk-Assessment-Report-July-2024.txt
errors/: __init__.py  errors.py
mcpserver/: calendar_formatting.py  context_manager.py  mail_query.py  message_info.py  server.py
mcpserver/graph/: __init__.py  calendar_service.py  controller.py  files_service.py  mail_service.py
mcpserver/pipeline/: __init__.py  pipeline.py
pipeline/: __init__.py  azure_pipeline.py  pipeline.py
ui/: app_body.py  chatbot.py  common_queries.py  custom_styles.py  dashboard.py  file_manager.py  header.py  indices.py  reg_toggle.py  sources.py
utils/: auth_wrapper.py  context_manager.py  llama_chatbot.py  llama_retrieval.py  node_processor.py
