[project]
name = "outlookmcpserver"
version = "0.1.0"
description = "An MCP Server for giving Claude control over Outlook on Mac"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "azure-identity",
    "msgraph-core",
    "msgraph-sdk",
    "pytest",
    "numpy>2.0",
    "pandas>2.1.0",
    "llama_cloud",
    "streamlit",
    "llama_index",
]
