[project]
name = "proof"
version = "0.1.0"
description = "An agentic Board advisor"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "azure-identity",
    "msgraph-core",
    "msgraph-sdk",
    "pytest",
    "numpy>2.0",
    "pandas>2.1.0",
    "llama_cloud",
    "streamlit",
    "llama_index",
    "Authlib",
    "azure-storage-blob",
    "azure-search-documents",
    "azure-ai-documentintelligence",
    "azure-ai-formrecognizer"

]
